--- a/toppers.html
+++ b/toppers.html
@@ -1,273 +1,410 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toppers - Noorussalam Madrasa</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Toppers - Noorussalam Madrasa</title>
 
-  <style>
-    body {
-      background: #0b0f1c;
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", sans-serif;
-      color: white;
-    }
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-    h1 {
-      text-align: center;
-      padding: 25px 0;
-      color: #00aaff;
-      font-size: 38px;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
+<!-- Confetti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-    .topper-section {
-      margin: 40px auto;
-      width: 95%;
-      max-width: 1100px;
-    }
+<style>
+body{
+  background:linear-gradient(120deg,#a7d7ff,#0d6efd,#82c4ff);
+  background-size:300% 300%;
+  animation:bgMove 10s infinite ease-in-out;
+  font-family:'Poppins',sans-serif;
+  padding:20px;
+}
 
-    .section-title {
-      text-align: center;
-      font-size: 32px;
-      color: #00aaff;
-      margin-bottom: 25px;
-      font-weight: 700;
-    }
+@keyframes bgMove{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
 
-    .topper-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 25px;
-    }
+h1{
+  text-align:center;
+  font-weight:700;
+  color:white;
+  margin-bottom:30px;
+}
 
-    .topper-card {
-      position: relative;
-      background: rgba(15, 20, 40, 0.9);
-      padding: 25px;
-      border-radius: 20px;
-      text-align: center;
-      backdrop-filter: blur(8px);
-      border: 2px solid rgba(0, 132, 255, 0.4);
-      box-shadow: 0 0 12px #0099ff;
-      overflow: hidden;
-      animation: zoomIn 0.8s ease;
-      transition: 0.3s;
-    }
+.section-title{
+  text-align:center;
+  color:white;
+  font-size:1.7rem;
+  font-weight:700;
+  margin-top:40px;
+  margin-bottom:20px;
+  text-shadow:0 3px 8px rgba(0,0,0,0.3);
+}
 
-    .topper-card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 18px #00aaff, 0 0 35px #0077cc inset;
-    }
+/* Topper Card */
+.topper-card{
+  background:white;
+  padding:20px;
+  border-radius:20px;
+  text-align:center;
+  box-shadow:0 15px 35px rgba(0,0,0,0.2);
+  border:3px solid gold;
+  overflow:hidden;
+  position:relative;
+  animation:glow 3s infinite;
+}
 
-    @keyframes zoomIn {
-      from { transform: scale(0.9); opacity: 0; }
-      to   { transform: scale(1); opacity: 1; }
-    }
+@keyframes glow{
+  0%{box-shadow:0 0 10px gold}
+  50%{box-shadow:0 0 30px gold}
+  100%{box-shadow:0 0 10px gold}
+}
 
-    .photo img {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      border: 4px solid #00aaff;
-      object-fit: cover;
-      margin-bottom: 10px;
-    }
+/* Shine */
+.topper-card::after{
+  content:"";
+  position:absolute;
+  top:-120%;
+  left:-100%;
+  width:250%;
+  height:350%;
+  background:linear-gradient(120deg,transparent,rgba(255,255,255,0.5),transparent);
+  transform:rotate(25deg);
+  animation:shine 5s infinite;
+}
 
-    .medal {
-      position: absolute;
-      top: -10px;
-      right: -10px;
-      background: linear-gradient(45deg, #FFD700, #FFC300);
-      color: #000;
-      padding: 8px 15px;
-      font-weight: bold;
-      font-size: 18px;
-      border-radius: 50px;
-      box-shadow: 0 0 10px gold;
-    }
+@keyframes shine{
+  0%{transform:translateX(-150%) rotate(25deg)}
+  30%{transform:translateX(150%) rotate(25deg)}
+  100%{transform:translateX(150%) rotate(25deg)}
+}
 
-    .shine {
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 60%;
-      height: 100%;
-      background: linear-gradient(120deg, transparent, rgba(255,255,255,0.4), transparent);
-      transform: skewX(-20deg);
-      animation: shine 3s infinite;
-    }
+.medal{
+  width:75px;
+  height:75px;
+  border-radius:50%;
+  background:gold;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:30px;
+  font-weight:800;
+  color:white;
+  margin:auto;
+  box-shadow:0 0 12px gold;
+}
 
-    @keyframes shine {
-      0% { left: -100%; }
-      100% { left: 130%; }
-    }
+.topper-photo{
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  margin-top:15px;
+  border:4px solid #0d6efd;
+  object-fit:cover;
+}
 
-    @keyframes glowBorder {
-      from { border-color: #0066cc; }
-      to   { border-color: #33ccff; }
-    }
-    .topper-card {
-      animation: glowBorder 2.5s infinite alternate;
-    }
+.topper-name{
+  font-size:1.3rem;
+  font-weight:700;
+  color:#0d6efd;
+  margin-top:10px;
+}
 
-    .btn-download {
-      display: inline-block;
-      margin-top: 10px;
-      background: #00aaff;
-      padding: 8px 15px;
-      color: white;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .btn-download:hover {
-      background: #0088dd;
-    }
+.btn-download,.btn-print{
+  width:100%;
+  border-radius:10px;
+  padding:10px;
+  margin-top:8px;
+  font-weight:600;
+  border:none;
+}
 
-    .back-btn {
-      text-align: center;
-      margin: 30px 0;
-    }
-    .back-btn a {
-      background: #0077cc;
-      padding: 12px 25px;
-      color: white;
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-    }
-    .back-btn a:hover {
-      background: #0099ff;
-    }
+.btn-download{
+  background:#0d6efd;
+  color:#fff;
+}
 
-    @media (max-width: 768px) {
-      .topper-grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+.btn-print{
+  background:#ffaa00;
+  color:black;
+}
+
+</style>
 </head>
-
 <body>
 
-  <h1>RESULT TOPPERS – NOORUSSALAM MADRASA</h1>
+<audio id="medalSound">
+  <source src="medal.mp3" type="audio/mpeg">
+</audio>
 
-  <!-- ================= MARKS TOPPERS ================= -->
-  <section class="topper-section">
-    <h2 class="section-title">🏆 Class Toppers – Marks</h2>
+<script>
+function playMedalSound(){
+  document.getElementById("medalSound").play();
+}
+</script>
 
-    <div class="topper-grid">
+<h1>Topper Students - Noorussalam Madrasa</h1>
 
-      <!-- CLASS 1 -->
-      <div class="topper-card">
-        <div class="medal">1st</div>
-        <div class="photo"><img src="student1.jpg"></div>
-        <h3>Class 1</h3>
-        <p>Ameen Rahman</p>
-        <p>Score: 489/500</p>
-        <button class="btn-download"
-        onclick="generateCertificate('Ameen Rahman','1st Rank','Class 1')">Download Certificate</button>
-        <div class="shine"></div>
-      </div>
+<div class="container">
 
-      <!-- CLASS 2 -->
-      <div class="topper-card">
-        <div class="medal">1st</div>
-        <div class="photo"><img src="student2.jpg"></div>
-        <h3>Class 2</h3>
-        <p>Nuzla Fathima</p>
-        <p>Score: 476/500</p>
-        <button class="btn-download"
-        onclick="generateCertificate('Nuzla Fathima','1st Rank','Class 2')">Download Certificate</button>
-        <div class="shine"></div>
-      </div>
+<!-- ================= CLASS 1 ================= -->
+<h2 class="section-title">Class 1 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class1.png" class="topper-photo">
+<div class="topper-name">Student Class 1</div>
 
-      <!-- Repeat for Class 3–10 as needed -->
-    </div>
-  </section>
+<button class="btn-download" onclick="downloadCertificate('Student Class 1','1st Rank','Class 1')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-  <!-- ================= HAJAR TOPPERS ================= -->
-  <section class="topper-section">
-    <h2 class="section-title">🌙 Class Toppers – Hajar</h2>
+<button class="btn-print" onclick="printCertificate('Student Class 1','1st Rank','Class 1')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
 
-    <div class="topper-grid">
+<!-- ================= CLASS 2 ================= -->
+<h2 class="section-title">Class 2 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class2.png" class="topper-photo">
+<div class="topper-name">Student Class 2</div>
 
-      <!-- CLASS 1 -->
-      <div class="topper-card">
-        <div class="medal">1st</div>
-        <div class="photo"><img src="hajar1.jpg"></div>
-        <h3>Class 1</h3>
-        <p>Rayhan P</p>
-        <p>Hajar: 29 Days</p>
-        <button class="btn-download"
-        onclick="generateCertificate('Rayhan P','1st Rank','Hajar Class 1')">Download Certificate</button>
-        <div class="shine"></div>
-      </div>
+<button class="btn-download" onclick="downloadCertificate('Student Class 2','1st Rank','Class 2')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-      <!-- CLASS 2 -->
-      <div class="topper-card">
-        <div class="medal">1st</div>
-        <div class="photo"><img src="hajar2.jpg"></div>
-        <h3>Class 2</h3>
-        <p>Safwana N</p>
-        <p>Hajar: 30 Days</p>
-        <button class="btn-download"
-        onclick="generateCertificate('Safwana N','1st Rank','Hajar Class 2')">Download Certificate</button>
-        <div class="shine"></div>
-      </div>
+<button class="btn-print" onclick="printCertificate('Student Class 2','1st Rank','Class 2')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
 
-      <!-- Repeat for Class 3–10 -->
-    </div>
-  </section>
+<!-- ================= CLASS 3 ================= -->
+<h2 class="section-title">Class 3 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class3.png" class="topper-photo">
+<div class="topper-name">Student Class 3</div>
 
-  <!-- ================= BACK TO HOME ================= -->
-  <div class="back-btn">
-    <a href="index.html">← Back to Home</a>
-  </div>
+<button class="btn-download" onclick="downloadCertificate('Student Class 3','1st Rank','Class 3')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-  <!-- ================= CERTIFICATE GENERATOR ================= -->
-  <script>
-  function generateCertificate(name, rank, classname) {
+<button class="btn-print" onclick="printCertificate('Student Class 3','1st Rank','Class 3')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
 
-      const width = 1400;
-      const height = 1000;
+<!-- ================= CLASS 4 ================= -->
+<h2 class="section-title">Class 4 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class4.png" class="topper-photo">
+<div class="topper-name">Student Class 4</div>
 
-      const canvas = document.createElement("canvas");
-      canvas.width = width;
-      canvas.height = height;
-      const ctx = canvas.getContext("2d");
+<button class="btn-download" onclick="downloadCertificate('Student Class 4','1st Rank','Class 4')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-      const bg = new Image();
-      bg.src = "certificate-bg.png";
+<button class="btn-print" onclick="printCertificate('Student Class 4','1st Rank','Class 4')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
 
-      bg.onload = () => {
-          ctx.drawImage(bg, 0, 0, width, height);
+<!-- ================= CLASS 5 ================= -->
+<h2 class="section-title">Class 5 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class5.png" class="topper-photo">
+<div class="topper-name">Student Class 5</div>
 
-          ctx.fillStyle = "#000";
-          ctx.textAlign = "center";
+<button class="btn-download" onclick="downloadCertificate('Student Class 5','1st Rank','Class 5')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-          ctx.font = "bold 70px Poppins";
-          ctx.fillText(name, width / 2, 520);
+<button class="btn-print" onclick="printCertificate('Student Class 5','1st Rank','Class 5')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
 
-          ctx.font = "40px Poppins";
-          ctx.fillText("Class: " + classname + "   |   Rank: " + rank, width / 2, 610);
+<!-- ================= CLASS 6 ================= -->
+<h2 class="section-title">Class 6 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class6.png" class="topper-photo">
+<div class="topper-name">Student Class 6</div>
 
-          ctx.font = "35px Poppins";
-          ctx.fillText("Academic Year 2024-25", width / 2, 700);
+<button class="btn-download" onclick="downloadCertificate('Student Class 6','1st Rank','Class 6')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
 
-          const link = document.createElement("a");
-          link.download = name + "-certificate.png";
-          link.href = canvas.toDataURL("image/png");
-          link.click();
-      };
+<button class="btn-print" onclick="printCertificate('Student Class 6','1st Rank','Class 6')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+<!-- ================= CLASS 7 ================= -->
+<h2 class="section-title">Class 7 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class7.png" class="topper-photo">
+<div class="topper-name">Student Class 7</div>
+
+<button class="btn-download" onclick="downloadCertificate('Student Class 7','1st Rank','Class 7')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
+
+<button class="btn-print" onclick="printCertificate('Student Class 7','1st Rank','Class 7')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+<!-- ================= CLASS 8 ================= -->
+<h2 class="section-title">Class 8 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class8.png" class="topper-photo">
+<div class="topper-name">Student Class 8</div>
+
+<button class="btn-download" onclick="downloadCertificate('Student Class 8','1st Rank','Class 8')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
+
+<button class="btn-print" onclick="printCertificate('Student Class 8','1st Rank','Class 8')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+<!-- ================= CLASS 9 ================= -->
+<h2 class="section-title">Class 9 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class9.png" class="topper-photo">
+<div class="topper-name">Student Class 9</div>
+
+<button class="btn-download" onclick="downloadCertificate('Student Class 9','1st Rank','Class 9')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
+
+<button class="btn-print" onclick="printCertificate('Student Class 9','1st Rank','Class 9')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+<!-- ================= CLASS 10 ================= -->
+<h2 class="section-title">Class 10 – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="class10.png" class="topper-photo">
+<div class="topper-name">Student Class 10</div>
+
+<button class="btn-download" onclick="downloadCertificate('Student Class 10','1st Rank','Class 10')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
+
+<button class="btn-print" onclick="printCertificate('Student Class 10','1st Rank','Class 10')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+<!-- ================= HAJAR ================= -->
+<h2 class="section-title">Hajar Section – First Rank</h2>
+<div class="row justify-content-center">
+<div class="col-md-6">
+<div class="topper-card" onmouseover="playMedalSound()">
+<div class="medal">1</div>
+<img src="hajar.png" class="topper-photo">
+<div class="topper-name">Hajar Topper</div>
+
+<button class="btn-download" onclick="downloadCertificate('Hajar Topper','1st Rank','Hajar')">
+<i class="fa fa-download"></i> Download Certificate
+</button>
+
+<button class="btn-print" onclick="printCertificate('Hajar Topper','1st Rank','Hajar')">
+<i class="fa fa-print"></i> Print Certificate
+</button>
+</div></div></div>
+
+</div>
+
+<!-- ================= CERTIFICATE GENERATOR ================= -->
+<script>
+
+function launchConfetti(){
+  confetti({particleCount:150,spread:80,startVelocity:50});
+  setTimeout(()=>confetti({particleCount:100,spread:70}),400);
+}
+
+function generateCertificate(name,rank,cls,mode="download"){
+  const w=1400,h=1000;
+  const canvas=document.createElement("canvas");
+  canvas.width=w; canvas.height=h;
+  const ctx=canvas.getContext("2d");
+  const bg=new Image();
+  bg.src="certificate-bg.png";
+
+  bg.onload=()=>{
+    ctx.drawImage(bg,0,0,w,h);
+    ctx.textAlign="center";
+    ctx.fillStyle="#000";
+
+    ctx.font="bold 70px Poppins";
+    ctx.fillText(name,w/2,480);
+
+    ctx.font="40px Poppins";
+    ctx.fillText("Class: "+cls+" | Rank: "+rank,w/2,580);
+
+    ctx.font="35px Poppins";
+    ctx.fillText("Academic Year 2024-25",w/2,680);
+
+    let data=canvas.toDataURL();
+
+    if(mode==="download"){
+      let a=document.createElement("a");
+      a.download=name+"-certificate.png";
+      a.href=data;
+      a.click();
+      launchConfetti();
+    }
+
+    if(mode==="print"){
+      let win=window.open("");
+      win.document.write(`<img src="${data}" style="width:100%">`);
+      setTimeout(()=>win.print(),500);
+    }
   }
-  </script>
+}
+
+function downloadCertificate(n,r,c){
+  generateCertificate(n,r,c,"download");
+}
+function printCertificate(n,r,c){
+  generateCertificate(n,r,c,"print");
+}
+
+</script>
 
 </body>
 </html>
