--- a/toppers.html
+++ b/toppers.html
@@ -395,7 +395,7 @@
   <script>
     // --------- EDIT THIS: replace YOUR_SHEET_ID with your sheet id and Sheet1 with your sheet name if different -------
     // Example sheet URL after publishing: https://opensheet.elk.sh/1AbcXYZ123/Sheet1
-    const sheetURL = "https://opensheet.elk.sh/YOUR_SHEET_ID/Sheet1";
+    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSQTwuWuYvEFsfQjZscxEYel2M7bVNujLI2Lj3KcsQkRLj_sP7dKDz42ShOQ2e44BRZBQxKpCq9aeYN/pubhtml";
     // Your Google Sheet should have columns EXACTLY named: CLASS, NAME, MARK, PHOTO, RANK, SECTION
     // Only rows where RANK == "1" will be shown. SECTION should be "MARK" or "HAJAR" (case-insensitive)
     fetch(sheetURL)
