--- a/toppers.html
+++ b/toppers.html
@@ -1,231 +1,323 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Toppers - Noorussalam Madrasa</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Toppers - Noorussalam Madrasa</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&family=Amiri&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Amiri&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti"></script>
+  <!-- Confetti -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <!-- jsPDF for PDF export -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-<style>
-body {
-  margin:0;
-  padding:20px;
-  background:linear-gradient(135deg,#dff6ff,#b9dbff);
-  font-family:"Poppins",sans-serif;
-}
+  <style>
+    :root{
+      --accent:#0d6efd;
+      --gold:#ffd700;
+      --card-radius:16px;
+      --max-width:1100px;
+      --bg1:#e7f8ff;
+      --bg2:#bfe6ff;
+    }
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:"Poppins",sans-serif;
+      background: linear-gradient(120deg,var(--bg1),var(--bg2));
+      background-size:300% 300%;
+      animation: bgMove 12s infinite ease-in-out;
+      color:#073045;
+      padding:20px;
+    }
+    @keyframes bgMove{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 
-.container { max-width:1100px; margin:auto; }
+    .wrap{max-width:var(--max-width);margin:0 auto 60px;}
+    header{text-align:center;margin-bottom:18px}
+    header h1{color:var(--accent);margin:6px 0;font-size:30px}
+    header p{margin:0;color:#0b3b50;opacity:.9}
 
-h1 {
-  text-align:center;
-  color:#0d6efd;
-  font-weight:800;
-  margin-bottom:5px;
-}
+    .sub{ text-align:center;color:#083a4a;opacity:.85;margin-bottom:20px }
 
-.sub {text-align:center; color:#033; opacity:.8; margin-bottom:25px;}
+    .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:20px}
+    @media(max-width:820px){ .grid{grid-template-columns:1fr} }
 
-.grid {
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:20px;
-}
-@media(max-width:768px){ .grid{grid-template-columns:1fr;} }
+    .card{
+      background:linear-gradient(180deg,#fff,#fbfeff);
+      border-radius:var(--card-radius);
+      padding:18px;
+      box-shadow:0 12px 28px rgba(2,6,23,0.06);
+      border:3px solid rgba(255,215,0,0.65);
+      position:relative; overflow:hidden;
+      transition:transform .22s ease, box-shadow .22s ease;
+    }
+    .card:hover{ transform:translateY(-6px); box-shadow:0 20px 40px rgba(2,6,23,0.12); }
 
-.card{
-  background:white;
-  border-radius:18px;
-  padding:20px;
-  border:3px solid gold;
-  box-shadow:0 8px 23px rgba(0,0,0,.15);
-  position:relative;
-  overflow:hidden;
-}
+    /* shine overlay */
+    .card::after{
+      content:"";
+      position:absolute; top:-150%; left:-120%; width:240%; height:340%;
+      transform:rotate(22deg);
+      background:linear-gradient(120deg, transparent 0%, rgba(255,255,255,0.6) 50%, transparent 100%);
+      animation:shine 5s linear infinite; pointer-events:none;
+    }
+    @keyframes shine{0%{transform:translateX(-140%) rotate(22deg)}30%{transform:translateX(140%) rotate(22deg)}100%{transform:translateX(140%) rotate(22deg)}}
 
-/* Shine Effect */
-.card::after{
-  content:"";
-  position:absolute;
-  top:-200%;
-  left:-100%;
-  width:250%;
-  height:400%;
-  background:linear-gradient(120deg,transparent,rgba(255,255,255,.5),transparent);
-  animation:shine 5s linear infinite;
-}
-@keyframes shine{
-  0%{transform:translateX(-100%) rotate(25deg)}
-  50%{transform:translateX(120%) rotate(25deg)}
-  100%{transform:translateX(120%) rotate(25deg)}
-}
+    .medal{ width:68px;height:68px;border-radius:50%;background:var(--gold);display:flex;align-items:center;justify-content:center;font-weight:900;color:#000;margin:auto;font-size:22px;box-shadow:0 6px 18px rgba(255,215,0,0.5) }
+    .photo{ width:120px;height:120px;border-radius:50%;overflow:hidden;margin:12px auto;border:4px solid var(--accent);box-shadow:0 8px 20px rgba(13,110,253,0.14) }
+    .photo img{ width:100%; height:100%; object-fit:cover; display:block; }
 
-.medal{
-  width:65px; height:65px; border-radius:50%;
-  background:gold; display:flex; align-items:center; justify-content:center;
-  font-size:24px; font-weight:900; color:#000; margin:auto;
-}
+    .name{ text-align:center; font-size:18px; font-weight:700; color:#063a4a; margin-top:6px;}
+    .meta{ text-align:center; color:#124; font-weight:600; margin-top:6px; }
 
-.photo{
-  width:120px; height:120px; border-radius:50%;
-  overflow:hidden; margin:12px auto;
-  border:4px solid #0d6efd;
-}
-.photo img{ width:100%; height:100%; object-fit:cover; }
+    .btns{ display:flex; gap:8px; justify-content:center; margin-top:12px; flex-wrap:wrap; }
+    .btn{ padding:10px 14px; border-radius:10px; font-weight:800; border:none; cursor:pointer; }
+    .btn-png{ background:var(--gold); color:#000; }
+    .btn-pdf{ background: #0d6efd; color:#fff; }
+    .btn-print{ background:#2dd4bf; color:#063a4a; }
 
-.name{text-align:center;font-size:20px;font-weight:700;margin-top:5px;}
-.meta{text-align:center;font-size:15px;color:#113;margin-top:3px;}
+    footer{ margin-top:30px; text-align:center; color:#083a4a; opacity:.9; }
 
-.btns{display:flex;justify-content:center;gap:10px;margin-top:12px;}
-.btn{
-  padding:10px 14px; border:none; border-radius:10px;
-  font-weight:700; cursor:pointer;
-}
-.btn-download{background:gold;}
-.btn-print{background:#0d6efd;color:white;}
-</style>
+    /* small screens */
+    @media (max-width:520px){ .btns{flex-direction:column} .photo{width:100px;height:100px} }
+  </style>
 </head>
-
 <body>
+  <div class="wrap">
+    <header>
+      <h1>NOORUSSALAM MADRASA — CLASS TOPPERS (MARK)</h1>
+      <p class="sub">First Rank only — Offline list (no Google Sheet). Edit the `toppers` array inside the script to change data.</p>
+    </header>
 
-<div class="container">
-  <h1>CLASS TOPPERS (MARK)</h1>
-  <div class="sub">First Rank Only • Offline Mode (No Google Sheet)</div>
+    <div id="grid" class="grid" aria-live="polite"></div>
 
-  <div id="topperGrid" class="grid"></div>
-</div>
+    <footer>© Noorussalam Madrasa — Certificates include English + Arabic • Auto date • Principal signature</footer>
+  </div>
 
-<script>
-// ------------------------------------------------------------
-//  MANUAL TOPPER LIST  — EDIT THIS PART ONLY
-// ------------------------------------------------------------
-const toppers = [
-  {class:"1", name:"Ayesha Rahman", mark:"498 / 500", photo:""},
-  {class:"2", name:"Muhammed Shahid", mark:"493 / 500", photo:""},
-  {class:"3", name:"Nimra Sameer", mark:"487 / 500", photo:""},
-  {class:"4", name:"Faris P", mark:"489 / 500", photo:""},
-  {class:"5", name:"Shamil N", mark:"491 / 500", photo:""},
-  {class:"6", name:"Hana M", mark:"480 / 500", photo:""},
-  {class:"7", name:"Riyas M", mark:"485 / 500", photo:""},
-  {class:"8", name:"Zainab K", mark:"492 / 500", photo:""},
-  {class:"9", name:"Yusuf T", mark:"488 / 500", photo:""},
-  {class:"10", name:"Saniya F", mark:"495 / 500", photo:""}
-];
-// ------------------------------------------------------------
+  <!-- small in-browser medal sound (no external file) -->
+  <script>
+    const AudioCtx = window.AudioContext || window.webkitAudioContext;
+    const audioCtx = AudioCtx ? new AudioCtx() : null;
+    function playMedalSound(){
+      if(!audioCtx) return;
+      try{
+        const o = audioCtx.createOscillator(), g = audioCtx.createGain();
+        o.type = 'sine'; o.frequency.setValueAtTime(880, audioCtx.currentTime);
+        g.gain.setValueAtTime(0.0, audioCtx.currentTime);
+        g.gain.linearRampToValueAtTime(0.12, audioCtx.currentTime + 0.01);
+        g.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + 0.45);
+        o.connect(g); g.connect(audioCtx.destination);
+        o.start(); o.stop(audioCtx.currentTime + 0.5);
+      }catch(e){}
+    }
+  </script>
 
+  <script>
+  // ---------------------------
+  // MANUAL TOPPERS LIST (EDIT HERE)
+  // ---------------------------
+  const toppers = [
+    { class: "1", name: "Ayesha Rahman", mark: "498 / 500", photo: "" },
+    { class: "2", name: "Muhammed Shahid", mark: "493 / 500", photo: "" },
+    { class: "3", name: "Nimra Sameer", mark: "487 / 500", photo: "" },
+    { class: "4", name: "Faris P", mark: "489 / 500", photo: "" },
+    { class: "5", name: "Shamil N", mark: "491 / 500", photo: "" },
+    { class: "6", name: "Hana M", mark: "480 / 500", photo: "" },
+    { class: "7", name: "Riyas M", mark: "485 / 500", photo: "" },
+    { class: "8", name: "Zainab K", mark: "492 / 500", photo: "" },
+    { class: "9", name: "Yusuf T", mark: "488 / 500", photo: "" },
+    { class: "10", name: "Saniya F", mark: "495 / 500", photo: "" }
+  ];
+  // ---------------------------
+  // local filenames for certificate background & principal signature
+  // Place these files in same folder as this HTML:
+  // - CERTIFICATR.jpg
+  // - WhatsApp Image 2025-11-26 at 11.41.41 AM.jpeg
+  const CERT_BG = "CERTIFICATR.jpg";
+  const SIG_SRC = "WhatsApp Image 2025-11-26 at 11.41.41 AM.jpeg";
 
-// Medal Sound
-const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-function playMedal(){
-  const o = audioCtx.createOscillator(), g = audioCtx.createGain();
-  o.frequency.value = 830;
-  g.gain.value = 0.12;
-  o.connect(g); g.connect(audioCtx.destination);
-  o.start(); g.gain.exponentialRampToValueAtTime(0.0001,audioCtx.currentTime+0.5);
-  o.stop(audioCtx.currentTime+0.5);
-}
+  // small SVG placeholder if no photo provided
+  function placeholderDataURL(){
+    const svg = '<svg xmlns="http://www.w3.org/2000/svg" width="220" height="220"><rect width="100%" height="100%" fill="#eef9ff"/><circle cx="110" cy="84" r="48" fill="#cfeeff"/><rect x="30" y="150" width="160" height="30" rx="15" fill="#cfeeff"/></svg>';
+    return 'data:image/svg+xml;utf8,' + encodeURIComponent(svg);
+  }
 
-// Certificate Generator
-const CERT_BG = "CERTIFICATR.jpg";
-const SIG = "WhatsApp Image 2025-11-26 at 11.41.41 AM.jpeg";
+  // render cards
+  const grid = document.getElementById("grid");
+  toppers.forEach(t => {
+    const photoURL = t.photo && t.photo.length ? t.photo : placeholderDataURL();
 
-function downloadCert(name, cls, mark, photo){
-  generateCertificate(name, cls, mark, photo, "download");
-  confetti({particleCount:150, spread:80});
-}
+    const card = document.createElement("div");
+    card.className = "card";
 
-function printCert(name, cls, mark, photo){
-  generateCertificate(name, cls, mark, photo, "print");
-}
-
-function generateCertificate(name, cls, mark, photo, mode){
-  const w=1920,h=1280, c=document.createElement("canvas");
-  c.width=w; c.height=h;
-  const ctx=c.getContext("2d");
-
-  const bg=new Image(), sigImg=new Image();
-  bg.src=CERT_BG; sigImg.src=SIG;
-
-  bg.onload=()=>{
-
-    ctx.drawImage(bg,0,0,w,h);
-
-    ctx.textAlign="center";
-    ctx.fillStyle="#000";
-
-    ctx.font="700 70px Poppins";
-    ctx.fillText("Certificate of Excellence", w/2, 300);
-
-    ctx.font="700 60px Amiri";
-    ctx.fillText("شهادة التفوق", w/2, 360);
-
-    ctx.font="700 80px Poppins";
-    ctx.fillText(name, w/2, 520);
-
-    ctx.font="700 60px Amiri";
-    ctx.fillText(name, w/2, 590);
-
-    ctx.font="40px Poppins";
-    ctx.fillText(`Class ${cls} | Mark: ${mark}`, w/2, 680);
-
-    ctx.font="34px Amiri";
-    ctx.fillText(`الصف ${cls}  |  الدرجات ${mark}`, w/2, 740);
-
-    // Auto date
-    const d=new Date().toLocaleDateString("en-GB",{day:"numeric",month:"long",year:"numeric"});
-    ctx.textAlign="left";
-    ctx.font="30px Poppins";
-    ctx.fillText(d, 150, h-150);
-
-    // Draw signature
-    sigImg.onload=()=>{
-      ctx.drawImage(sigImg, w-600, h-350, 380, 160);
-
-      // Output
-      const url=c.toDataURL("image/png");
-      if(mode==="download"){
-        const a=document.createElement("a");
-        a.href=url; a.download=`${name}-certificate.png`;
-        a.click();
-      } else {
-        const w2=window.open("");
-        w2.document.write(`<img src="${url}">`);
-        setTimeout(()=>w2.print(),600);
-      }
-    };
-  };
-}
-
-// Insert Cards
-let html="";
-toppers.forEach(t=>{
-  const photo = t.photo || "https://via.placeholder.com/200x200.png?text=Photo";
-  html += `
-    <div class="card">
+    card.innerHTML = `
       <div class="medal">1</div>
-      <div class="photo"><img src="${photo}"></div>
-      <div class="name">${t.name}</div>
-      <div class="meta">Class ${t.class} • ${t.mark}</div>
-
+      <div class="photo"><img src="${photoURL}" alt="${escapeHtml(t.name)}"></div>
+      <div class="name">${escapeHtml(t.name)}</div>
+      <div class="meta">Class ${escapeHtml(t.class)} • ${escapeHtml(t.mark)}</div>
       <div class="btns">
-        <button class="btn btn-download"
-          onclick="playMedal(); downloadCert('${t.name}','${t.class}','${t.mark}','${photo}')">
-          <i class="fa fa-download"></i> Download
+        <button class="btn btn-png" title="Download PNG"
+          onclick="playMedalSound(); downloadPNG(${jsLit(t.name)}, ${jsLit(t.class)}, ${jsLit(t.mark)}, ${jsLit(photoURL)} )">
+          <i class="fa fa-file-image"></i>&nbsp;Download PNG
         </button>
 
-        <button class="btn btn-print"
-          onclick="playMedal(); printCert('${t.name}','${t.class}','${t.mark}','${photo}')">
-          <i class="fa fa-print"></i> Print
+        <button class="btn btn-pdf" title="Download PDF"
+          onclick="playMedalSound(); downloadPDF(${jsLit(t.name)}, ${jsLit(t.class)}, ${jsLit(t.mark)}, ${jsLit(photoURL)} )">
+          <i class="fa fa-file-pdf"></i>&nbsp;Download PDF
+        </button>
+
+        <button class="btn btn-print" title="Print"
+          onclick="playMedalSound(); printCertificate(${jsLit(t.name)}, ${jsLit(t.class)}, ${jsLit(t.mark)}, ${jsLit(photoURL)} )">
+          <i class="fa fa-print"></i>&nbsp;Print
         </button>
       </div>
-    </div>
-  `;
-});
-document.getElementById("topperGrid").innerHTML = html;
-</script>
+    `;
+    grid.appendChild(card);
+  });
 
+  // helpers
+  function escapeHtml(s){ return String(s||"").replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' })[m]); }
+  function jsLit(s){ if(s===undefined||s===null) return "''"; return "'" + String(s).replace(/\\/g,'\\\\').replace(/'/g,"\\'").replace(/\n/g,'\\n') + "'"; }
+
+  // Certificate generation:
+  // - PNG export using canvas.toDataURL("image/png")
+  // - PDF export using jsPDF (A4 landscape)
+  // - Print opens a new tab with the PNG and prints
+  async function renderCertificateCanvas(name, cls, mark, photoURL){
+    const w = 1920, h = 1280;
+    const canvas = document.createElement("canvas");
+    canvas.width = w; canvas.height = h;
+    const ctx = canvas.getContext("2d");
+
+    // load background & signature
+    const bg = await loadImage(CERT_BG);
+    ctx.drawImage(bg, 0, 0, w, h);
+
+    // optional student photo (circle left)
+    if(photoURL){
+      try{
+        const photo = await loadImage(photoURL);
+        const px = 260, py = 470, pr = 200;
+        ctx.save();
+        ctx.beginPath();
+        ctx.arc(px + pr/2, py + pr/2, pr/2, 0, Math.PI*2);
+        ctx.closePath();
+        ctx.clip();
+        ctx.drawImage(photo, px, py, pr, pr);
+        ctx.restore();
+      }catch(e){
+        // ignore photo error
+      }
+    }
+
+    // Text: dual-language
+    ctx.textAlign = "center";
+    ctx.fillStyle = "#000";
+
+    // Title English
+    ctx.font = "bold 72px Poppins";
+    ctx.fillText("Certificate of Excellence", w/2, 300);
+
+    // Title Arabic
+    ctx.font = "bold 64px Amiri, serif";
+    ctx.fillText("شهادة التفوق", w/2, 365);
+
+    // Name English
+    ctx.font = "bold 82px Poppins";
+    ctx.fillText(name, w/2, 520);
+
+    // Name Arabic (repeat)
+    ctx.font = "bold 70px Amiri, serif";
+    ctx.fillText(name, w/2, 600);
+
+    // Class & mark
+    ctx.font = "40px Poppins";
+    ctx.fillText(`Class: ${cls}   |   Marks: ${mark}`, w/2, 700);
+
+    ctx.font = "36px Amiri, serif";
+    ctx.fillText(`الصف: ${cls}   |   الدرجات: ${mark}`, w/2, 760);
+
+    // Auto date bottom-left (English)
+    const today = new Date();
+    const opts = { day: "numeric", month: "long", year: "numeric" };
+    const dateStr = today.toLocaleDateString("en-GB", opts);
+    ctx.textAlign = "left";
+    ctx.font = "28px Poppins";
+    ctx.fillText(dateStr, 140, h - 160);
+
+    // Signature bottom-right
+    try{
+      const sig = await loadImage(SIG_SRC);
+      const sigW = 380, sigH = 150;
+      ctx.drawImage(sig, w - 560, h - 360, sigW, sigH);
+    }catch(e){
+      // signature load fail silently
+    }
+
+    return canvas;
+  }
+
+  function loadImage(src){
+    return new Promise((res, rej) => {
+      const img = new Image();
+      img.crossOrigin = "anonymous";
+      img.onload = () => res(img);
+      img.onerror = () => rej(new Error("Image load error: " + src));
+      img.src = src;
+    });
+  }
+
+  // Download PNG
+  async function downloadPNG(name, cls, mark, photoURL){
+    try{
+      const canvas = await renderCertificateCanvas(name, cls, mark, photoURL);
+      const data = canvas.toDataURL("image/png");
+      const a = document.createElement("a");
+      a.href = data;
+      a.download = `${name.replace(/\s+/g,'_')}_certificate.png`;
+      a.click();
+      // confetti
+      confetti({ particleCount:150, spread:90, startVelocity:60 });
+    }catch(e){
+      alert("Failed to generate PNG: " + e.message);
+      console.error(e);
+    }
+  }
+
+  // Download PDF (A4 landscape) using jsPDF
+  async function downloadPDF(name, cls, mark, photoURL){
+    try{
+      const canvas = await renderCertificateCanvas(name, cls, mark, photoURL);
+      const imgData = canvas.toDataURL("image/png");
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF({ orientation: "landscape", unit: "px", format: [1122, 793] }); // A4 landscape approx in px
+      // add image full page
+      pdf.addImage(imgData, 'PNG', 0, 0, 1122, 793);
+      pdf.save(`${name.replace(/\s+/g,'_')}_certificate.pdf`);
+      confetti({ particleCount:120, spread:80, startVelocity:45 });
+    }catch(e){
+      alert("Failed to generate PDF: " + e.message);
+      console.error(e);
+    }
+  }
+
+  // Print: open new window with PNG and call print
+  async function printCertificate(name, cls, mark, photoURL){
+    try{
+      const canvas = await renderCertificateCanvas(name, cls, mark, photoURL);
+      const data = canvas.toDataURL("image/png");
+      const w = window.open("");
+      w.document.write(`<img src="${data}" style="width:100%;height:auto">`);
+      w.document.close();
+      setTimeout(()=>{ w.print(); }, 600);
+    }catch(e){
+      alert("Failed to prepare print: " + e.message);
+      console.error(e);
+    }
+  }
+  </script>
 </body>
 </html>
