--- a/toppers.html
+++ b/toppers.html
@@ -56,7 +56,6 @@
     }
     .card:hover{ transform:translateY(-6px); box-shadow:0 20px 40px rgba(2,6,23,0.12); }
 
-    /* shine overlay */
     .card::after{
       content:"";
       position:absolute; top:-150%; left:-120%; width:240%; height:340%;
@@ -129,8 +128,10 @@
     { class: "9", name: "Yusuf T", mark: "488 / 500", photo: "" },
     { class: "10", name: "Saniya F", mark: "495 / 500", photo: "" }
   ];
-  const CERT_BG = "CERTIFICATR.jpg";
-  const SIG_SRC = "WhatsApp Image 2025-11-26 at 11.41.41 AM.jpeg";
+
+  // **ONLINE IMAGES FOR CERTIFICATE**
+  const CERT_BG = "https://i.ibb.co/Fb5bkwrK/CERTIFICATR.jpg";
+  const SIG_SRC = "https://i.ibb.co/YOUR_SIGNATURE_IMAGE.jpg"; // replace with your online signature image URL
 
   function placeholderDataURL(){
     const svg = '<svg xmlns="http://www.w3.org/2000/svg" width="220" height="220"><rect width="100%" height="100%" fill="#eef9ff"/><circle cx="110" cy="84" r="48" fill="#cfeeff"/><rect x="30" y="150" width="160" height="30" rx="15" fill="#cfeeff"/></svg>';
@@ -177,8 +178,13 @@
     canvas.width = w; canvas.height = h;
     const ctx = canvas.getContext("2d");
 
-    const bg = await loadImage(CERT_BG);
-    ctx.drawImage(bg, 0, 0, w, h);
+    try { 
+      const bg = await loadImage(CERT_BG);
+      ctx.drawImage(bg, 0, 0, w, h);
+    } catch(e){
+      ctx.fillStyle = "#fff"; ctx.fillRect(0,0,w,h);
+      ctx.fillStyle="#000"; ctx.font="60px Poppins"; ctx.fillText("Certificate", w/2, 300);
+    }
 
     if(photoURL){
       try{
